style.css: Fix alignment of h3 element

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,11 @@ h4 {
   font-size: 25px;
 }
 
+h3 {
+  text-align: center;
+  margin-left: 40px;
+}
+
 p {
   font-size: large;
 }
